feat: add update profile schema
